--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ClothesApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ClothesApp" parent="Theme.Material3.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -13,4 +13,63 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="TextStyle">
+        <item name="android:fontFamily">@font/lato</item>
+    </style>
+
+    <style name="TextStyle.LabelSmall">
+        <item name="android:textSize">@dimen/text_tiny</item>
+    </style>
+
+    <style name="TextStyle.LabelMedium">
+        <item name="android:textSize">@dimen/text_semi_small</item>
+    </style>
+
+    <style name="TextStyle.LabelLarge">
+        <item name="android:textSize">@dimen/text_small</item>
+    </style>
+
+
+    <style name="TextStyle.BodySmall">
+        <item name="android:textSize">@dimen/text_semi_small</item>
+    </style>
+
+    <style name="TextStyle.BodyMedium">
+        <item name="android:textSize">@dimen/text_small</item>
+    </style>
+
+    <style name="TextStyle.BodyLarge">
+        <item name="android:textSize">@dimen/text_medium</item>
+    </style>
+
+
+    <style name="TextStyle.TitleSmall">
+        <item name="android:textSize">@dimen/text_small</item>
+        <item name="fontFamily">@font/lato_medium</item>
+    </style>
+
+    <style name="TextStyle.TitleMedium">
+        <item name="android:textSize">@dimen/text_medium</item>
+        <item name="fontFamily">@font/lato_medium</item>
+    </style>
+
+    <style name="TextStyle.TitleLarge">
+        <item name="android:textSize">@dimen/text_giant</item>
+    </style>
+
+<!--    <style name="TextStyle.BodyMedium.SearchBoxStyle">-->
+<!--        <item name="android:background">@drawable/search_edit_text_background</item>-->
+<!--        <item name="android:drawableStart">@drawable/ic_search</item>-->
+<!--        <item name="android:drawablePadding">@dimen/spacing_small</item>-->
+<!--        <item name="android:drawableTint">@color/on_background_38</item>-->
+<!--        <item name="android:gravity">center_vertical</item>-->
+<!--        <item name="android:hint">@string/search</item>-->
+<!--        <item name="android:imeOptions">flagNoFullscreen</item>-->
+<!--        <item name="android:inputType">text</item>-->
+<!--        <item name="android:padding">@dimen/spacing_medium</item>-->
+<!--        <item name="android:textColorHint">@color/on_background_38</item>-->
+<!--        <item name="android:textColor">@color/on_background_87</item>-->
+<!--        <item name="android:textCursorDrawable">@drawable/custom_cursor</item>-->
+<!--    </style>-->
 </resources>
